@@ -2,8 +2,6 @@ package dev.rilling.musicbrainzenricher;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.context.annotation.Scope;
-import org.springframework.core.env.Environment;
 
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
@@ -12,17 +10,7 @@ import java.util.concurrent.Executors;
 public class ApplicationConfiguration {
 
 	@Bean("enrichmentExecutor")
-	@Scope("singleton")
-	public ExecutorService enrichmentExecutor(Environment environment) {
-		int threadPoolSize = environment.getRequiredProperty("musicbrainz-enricher.enrichment-thread-pool-size",
-			Integer.class);
-		return Executors.newFixedThreadPool(threadPoolSize);
+	public ExecutorService enrichmentExecutor() {
+		return Executors.newVirtualThreadPerTaskExecutor();
 	}
-
-	@Bean("submissionExecutor")
-	@Scope("singleton")
-	public ExecutorService submissionExecutor() {
-		return Executors.newSingleThreadExecutor();
-	}
-
 }
