@@ -5,12 +5,12 @@ import dev.rilling.musicbrainzenricher.core.DataType;
 import dev.rilling.musicbrainzenricher.core.genre.GenreMatcherService;
 import dev.rilling.musicbrainzenricher.enrichment.GenreEnricher;
 import net.jcip.annotations.ThreadSafe;
-import org.jetbrains.annotations.NotNull;
 import org.musicbrainz.model.RelationWs2;
+import org.springframework.boot.autoconfigure.condition.ConditionalOnBean;
 import org.springframework.stereotype.Service;
+import se.michaelthelin.spotify.model_objects.specification.Album;
 
 import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Set;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -18,6 +18,7 @@ import java.util.regex.Pattern;
 // https://musicbrainz.org/release/5bcb2971-fdea-4543-baf2-dd41d8b9a3cd
 // https://open.spotify.com/album/0Q2o6ioxIOlKPvRdG1K5da
 @Service
+@ConditionalOnBean(SpotifyQueryService.class)
 @ThreadSafe
 class SpotifyReleaseEnricher implements GenreEnricher {
 
@@ -32,24 +33,29 @@ class SpotifyReleaseEnricher implements GenreEnricher {
 	}
 
 	@Override
-	@NotNull
-	public Set<String> fetchGenres(@NotNull RelationWs2 relation) {
-		return spotifyQueryService.lookUpRelease(findReleaseId(relation.getTargetId())).map(release -> {
-			Set<String> genres = new HashSet<>(Arrays.asList(release.getGenres()));
-			return genreMatcherService.match(genres);
-		}).orElse(Set.of());
+
+	public Set<String> fetchGenres(RelationWs2 relation) {
+		return spotifyQueryService
+			.lookUpRelease(findReleaseId(relation.getTargetId()))
+			.map(this::extractGenres)
+			.map(genreMatcherService::match)
+			.orElse(Set.of());
 	}
 
-	@NotNull
-	private String findReleaseId(@NotNull String relationUrl) {
+
+	private String findReleaseId(String relationUrl) {
 		Matcher matcher = URL_REGEX.matcher(relationUrl);
 		//noinspection ResultOfMethodCallIgnored We know we matched in #relationFits
 		matcher.matches();
 		return matcher.group("id");
 	}
 
+	private Set<String> extractGenres(Album album) {
+		return Set.copyOf(Arrays.asList(album.getGenres()));
+	}
+
 	@Override
-	public boolean isRelationSupported(@NotNull RelationWs2 relation) {
+	public boolean isRelationSupported(RelationWs2 relation) {
 		if (!"http://musicbrainz.org/ns/rel-2.0#url".equals(relation.getTargetType())) {
 			return false;
 		}
@@ -59,7 +65,7 @@ class SpotifyReleaseEnricher implements GenreEnricher {
 	}
 
 	@Override
-	@NotNull
+
 	public DataType getDataType() {
 		return DataType.RELEASE;
 	}
